# nuvemshop-test

./: .flake8  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
notebooks/: nuvemshop.ipynb
notebooks/utils/: parser.py  plots.py  stats.py
