[tool.poetry]
name = "nuvemshop"
version = "0.1.0"
description = "Nuvemshop technical test"
authors = ["Alefe Almeida <alefeofdealmeida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^1.22.2"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
scipy = "^1.8.0"
plotly = "^5.5.0"
catboost = "^1.0.4"
pydantic = "^1.10.7"
ipykernel = "^6.27.1"
statsmodels = "^0.14.0"
shap = "^0.46.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
tox = "^4.6.4"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-quotes = "^3.3.2"
flake8-pytest = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
